# txtai.rs

./: Cargo.toml  README.md
examples/demo/: Cargo.toml
examples/demo/src/: embeddings.rs  extractor.rs  labels.rs  main.rs  pipelines.rs
src/: api.rs  embeddings.rs  extractor.rs  labels.rs  lib.rs  segmentation.rs  similarity.rs  summary.rs  textractor.rs  transcription.rs  translation.rs  workflow.rs
