[package]
name = "txtai"
version = "7.0.0"
authors = ["NeuML"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/neuml/txtai.rs"
documentation = "https://github.com/neuml/txtai.rs"
homepage = "https://github.com/neuml/txtai.rs"
description = """
Rust client for txtai
"""
keywords = ["search", "nlp", "machine-learning", "similarity"]
categories = ["algorithms", "api-bindings", "text-processing"]
edition = "2018"

[dependencies]
enum-as-inner = { version = "0.6.0" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
